packages/aces-amf-lib/tests/Generated_Samples_AMF/valid_AMFs/20_no_input_transform.amf
<?xml version="1.0" encoding="UTF-8"?>
<aces:acesMetadataFile xmlns:aces="urn:ampas:aces:amf:v2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:cdl="urn:ASC:CDL:v1.01" version="2.0">
    <aces:amfInfo>
        <aces:description>Pipeline with No Input Transform</aces:description>
        <aces:author>
            <aces:name>ACES Pipeline TD</aces:name>
            <aces:emailAddress>aces@studio.com</aces:emailAddress>
        </aces:author>
        <aces:dateTime>
            <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
            <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
        </aces:dateTime>
        <aces:uuid>urn:uuid:1a61755b-622b-4f29-bd04-6e19bade5b82</aces:uuid>
    </aces:amfInfo>
    <aces:pipeline>
        <aces:pipelineInfo>
            <aces:description>Direct ACES Processing - No Camera IDT</aces:description>
            <aces:dateTime>
                <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
                <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
            </aces:dateTime>
            <aces:uuid>urn:uuid:e8afd449-2b7e-4849-b73b-b0ca04881a5d</aces:uuid>
            <aces:systemVersion>
                <aces:majorVersion>1</aces:majorVersion>
                <aces:minorVersion>3</aces:minorVersion>
                <aces:patchVersion>1</aces:patchVersion>
            </aces:systemVersion>
        </aces:pipelineInfo>
        <aces:lookTransform applied="false">
            <aces:description>ACES Gamut Compress</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v1.5:LMT.Academy.GamutCompress.a1.3.0</aces:transformId>
        </aces:lookTransform>
        <aces:lookTransform applied="false">
            <aces:description>Creative Color Grade</aces:description>
            <aces:cdlWorkingSpace>
                <aces:toCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACES_to_ACEScct.a1.0.3</aces:transformId>
                </aces:toCdlWorkingSpace>
                <aces:fromCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACEScct_to_ACES.a1.0.3</aces:transformId>
                </aces:fromCdlWorkingSpace>
            </aces:cdlWorkingSpace>
            <cdl:ASC_SOP>
                <cdl:Slope>1.05 1.0 0.97</cdl:Slope>
                <cdl:Offset>0.05 0.03 -0.08</cdl:Offset>
                <cdl:Power>1.04 1.01 0.95</cdl:Power>
            </cdl:ASC_SOP>
            <cdl:ASC_SAT>
                <cdl:Saturation>1.0</cdl:Saturation>
            </cdl:ASC_SAT>
        </aces:lookTransform>
        <aces:lookTransform applied="false">
            <aces:description>Final Look LUT</aces:description>
            <aces:hash algorithm="http://www.w3.org/2001/04/xmldsig-more#md5">4GYskVNKvJ8K1ltFxVqpgw==</aces:hash>
            <aces:file>MasterLookBright_O-Rec709.clf</aces:file>
        </aces:lookTransform>
        <aces:outputTransform applied="false">
            <aces:description>ACES to Rec.709</aces:description>
            <aces:referenceRenderingTransform>
                <aces:transformId>urn:ampas:aces:transformId:v1.5:RRT.a1.0.3</aces:transformId>
            </aces:referenceRenderingTransform>
            <aces:outputDeviceTransform>
                <aces:transformId>urn:ampas:aces:transformId:v1.5:ODT.Academy.Rec709_100nits_dim.a1.0.3</aces:transformId>
            </aces:outputDeviceTransform>
        </aces:outputTransform>
    </aces:pipeline>
</aces:acesMetadataFile>
