packages/aces-amf-lib/tests/Generated_Samples_AMF/invalid_AMFs/invalid_16_missing_file_reference.amf
<?xml version="1.0" encoding="UTF-8"?>
<aces:acesMetadataFile xmlns:aces="urn:ampas:aces:amf:v2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:cdl="urn:ASC:CDL:v1.01" version="2.0">
    <aces:amfInfo>
        <aces:description>INVALID: Missing File Reference</aces:description>
        <aces:author>
            <aces:name>Test Suite</aces:name>
            <aces:emailAddress>test@example.com</aces:emailAddress>
        </aces:author>
        <aces:dateTime>
            <aces:creationDateTime>2026-03-26T19:19:50Z</aces:creationDateTime>
            <aces:modificationDateTime>2026-03-26T19:19:50Z</aces:modificationDateTime>
        </aces:dateTime>
        <aces:uuid>urn:uuid:dd12bba7-e86e-4c5a-9bcb-39252a11bf00</aces:uuid>
    </aces:amfInfo>
    <aces:pipeline>
        <aces:pipelineInfo>
            <aces:description>Look transform references non-existent file</aces:description>
            <aces:dateTime>
                <aces:creationDateTime>2026-03-26T19:19:50Z</aces:creationDateTime>
                <aces:modificationDateTime>2026-03-26T19:19:50Z</aces:modificationDateTime>
            </aces:dateTime>
            <aces:uuid>urn:uuid:987f08e8-19c1-4ad4-a311-bf42a36e3d9f</aces:uuid>
            <aces:systemVersion>
                <aces:majorVersion>2</aces:majorVersion>
                <aces:minorVersion>0</aces:minorVersion>
                <aces:patchVersion>0</aces:patchVersion>
            </aces:systemVersion>
        </aces:pipelineInfo>
        <aces:inputTransform applied="true">
            <aces:description>Test IDT</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v2.0:CSC.Arri.LogC4_to_ACES.a2.v1</aces:transformId>
        </aces:inputTransform>
        <aces:lookTransform applied="true">
            <aces:description>Look with missing file</aces:description>
            <aces:file>THIS_FILE_DOES_NOT_EXIST.clf</aces:file>
        </aces:lookTransform>
        <aces:outputTransform applied="true">
            <aces:description>Test ODT</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v2.0:Output.Academy.Rec709-D65_100nit_in_Rec709-D65_BT1886.a2.v1</aces:transformId>
        </aces:outputTransform>
    </aces:pipeline>
</aces:acesMetadataFile>
